--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 /* intuitivnejší box-sizing */
-html { box-sizing: border-box; }
-*, ::after, ::before { box-sizing: inherit; }
+html {
+  box-sizing: border-box;
+}
+*,
+::after,
+::before {
+  box-sizing: inherit;
+}
 
 /*
 	BARVY
@@ -13,12 +19,238 @@ html { box-sizing: border-box; }
 	Raleway					nadpisy a menu
 	Oba fonty jsou dostupné na Google Fonts.
 */
-
-body {
-	margin: 0;
-	padding: 0;
-	background-color: #f5f5f5;
-	font-size: 16px;
-	line-height: 1.6;
+:root {
+  --seda: #f5f5f5;
+  --modra: #629fe0;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  background-color: var(--seda);
+  font-size: 14px;
+  line-height: 1.6;
+  font-family: 'Merriweather', serif;
+}
+.main-content {
+  margin-left: auto;
+  margin-right: auto;
+}
+nav,
+h1,
+h2 {
+  font-family: 'Raleway', sans-serif;
+}
+h1 {
+  font-size: 60px;
+  margin-top: 0;
+}
+img {
+  width: 100%;
+}
+
+/*-------------------------header-------------------------*/
+.header {
+  background-image: url(images/island-hlavicka.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  color: #fff;
+  text-align: center;
+  padding: 50px 150px;
+}
+.header p {
+  padding: 0 150px;
+  font-size: 13px;
+  font-weight: 300;
+}
+.header .author {
+  font-style: italic;
+}
+.header .author::before {
+  content: '';
+  display: block;
+  width: 70px;
+  border-top: 2px solid #fff;
+  margin: 5px auto;
+}
+
+/*-------------------------navigation-------------------------*/
+.menu {
+  text-align: center;
+  text-transform: uppercase;
+}
+.menu ul {
+  padding: 0 20px 40px 20px;
+}
+.menu li {
+  list-style-type: none;
+  border-bottom: 1px solid #cccccc;
+}
+.menu li a {
+  text-decoration: none;
+  color: #aaaaaa;
+}
+
+/*-------------------------main-------------------------*/
+.section-one,
+.section-two,
+.section-three,
+.section-four {
+  padding: 0 20px;
+}
+.caption,
+.caption a {
+  margin: 0;
+  text-align: center;
+  color: #aaaaaa;
+}
+h2::after {
+  content: '';
+  display: block;
+  width: 60px;
+  border-bottom: 2px solid var(--modra);
+}
+
+/*-------------------------gallery-------------------------*/
+.photo-galery {
+  padding-right: 0;
+  padding-left: 0;
+}
+.photo-galery h2 {
+  margin-left: 20px;
+}
+.photo p,
+.photo p a {
+  color: #aaaaaa;
+  text-align: center;
+  margin-top: 0;
+}
+.photo-name {
+  font-weight: bold;
+}
+
+/*-------------------------footer-------------------------*/
+.footer-content {
+  border-top: 1px solid #cccccc;
+  color: #aaaaaa;
+}
+.footer-content a {
+  color: #aaaaaa;
+}
+
+@media screen and (min-width: 540px) {
+  .menu li {
+    display: inline-block;
+    border-top: 1px solid #cccccc;
+  }
+  .menu li a {
+    padding: 0 20px;
+  }
+  .section-one,
+  .section-two,
+  .section-three,
+  .section-four {
+    padding: 0;
+  }
+  .galery {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  body {
+    position: absolute;
+  }
+  .photo p {
+    position: relative;
+    top: -60px;
+    right: 0;
+    margin-bottom: 0;
+  }
+  .photo p,
+  .photo p a {
+    color: #fff;
+    opacity: 0.8;
+  }
+  .photo img {
+    height: 100%;
+  }
+}
+
+@media screen and (min-width: 960px) {
+  .main-content {
+    max-width: 960px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: -50px;
+    background-color: #fff;
+    box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.05);
+  }
+  /*  .text-sections {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+  }
+ */
+  .footer-content {
+    border: 0;
+  }
+  .menu {
+    /* grid-column: 1/2;*/
+    margin-bottom: 0px;
+  }
+  .menu ul {
+    padding: 0;
+    text-align: left;
+    /*  display: flex;
+    flex-direction: column;
+    float: left; */
+  }
+  .menu ul li {
+    border-top: 0;
+  }
+  .menu,
+  .section-one,
+  .section-two,
+  .section-three,
+  .section-four {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+  }
+  .section-one .text {
+    grid-column: 2/4;
+    margin-top: -120px;
+  }
+  .section-one .image {
+    grid-column: 1/-1;
+  }
+  .section-two .text {
+    grid-column: 1/3;
+  }
+  .section-two .image {
+    grid-column: 1/-1;
+  }
+  .section-three .text {
+    grid-column: 2/4;
+  }
+  .section-three .image {
+    grid-column: 1/4;
+  }
+  .section-four .text {
+    grid-column: 2/4;
+  }
+  .galery {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .photo p {
+    opacity: 0;
+  }
+  .photo:hover p {
+    opacity: 1;
+    background-color: rgba(0, 0, 0, 0.5);
+    transform: scale(1.05);
+    transition: 0.5s ease-in-out;
+  }
+  .photo:hover img {
+    transform: scale(1.05);
+    transition: 0.5s ease-in-out;
+  }
+}
