--- a/style.css
+++ b/style.css
@@ -57,15 +57,15 @@ img {
   background-size: cover;
   color: #fff;
   text-align: center;
-  padding: 50px 150px;
 }
 .header p {
-  padding: 0 150px;
   font-size: 13px;
   font-weight: 300;
+  padding: 0 50px;
 }
 .header .author {
   font-style: italic;
+  padding-bottom: 15px;
 }
 .header .author::before {
   content: '';
@@ -140,6 +140,9 @@ h2::after {
 }
 
 @media screen and (min-width: 540px) {
+  body {
+    position: absolute;
+  }
   .menu li {
     display: inline-block;
     border-top: 1px solid #cccccc;
@@ -153,13 +156,17 @@ h2::after {
   .section-four {
     padding: 0;
   }
+  .section-one .text,
+  .section-two .text,
+  .section-three .text,
+  .section-four .text {
+    padding: 0 30px;
+  }
   .galery {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
   }
-  body {
-    position: absolute;
-  }
+
   .photo p {
     position: relative;
     top: -60px;
@@ -185,24 +192,18 @@ h2::after {
     background-color: #fff;
     box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.05);
   }
-  /*  .text-sections {
-    display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+  .header {
+    padding: 50px 150px;
   }
- */
-  .footer-content {
-    border: 0;
+  h1 {
+    font-size: 60px;
   }
   .menu {
-    /* grid-column: 1/2;*/
     margin-bottom: 0px;
   }
   .menu ul {
     padding: 0;
     text-align: left;
-    /*  display: flex;
-    flex-direction: column;
-    float: left; */
   }
   .menu ul li {
     border-top: 0;
@@ -252,5 +253,8 @@ h2::after {
   .photo:hover img {
     transform: scale(1.05);
     transition: 0.5s ease-in-out;
+  }
+  .footer-content {
+    border: 0;
   }
 }
